# U-drop

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  compile.sh  complie.bat  emcc.bat  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirments.txt  run_backend.bat  run_backend.sh  tailwind.config.js  udrop.db  vite.config.js  各个模块的业务逻辑.md  后端.md  计划api.md  计划功能.md
backend/: data_manager.py  database_operater.py  main.py
backend/core/: config.py  exceptions.py  logger.py  native_wrapper.py  system_guard.py
backend/db/: __init__.py  bootstrap.py  connection.py
backend/schemas/: auth.py  base.py  websocket.py
backend/sql/: 00_init_v2.sql
c_core/: MD5.c  MD5test.c  compile.bat  compile.sh  emcc_hash.sh  emcc_md5.bat  emcc_md5.sh  thumbnail.cpp
deploy/: Dockerfile  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/: App.vue  InitApp.vue  init-main.ts
lib/wasm/: hash.js  hash.wasm  md5.js  md5.wasm
server/: data_manager.py  database_operater.py  dependencies.py  main.py
server/api/: router.py
server/core/: config.py  rate_limiter.py  system_guard.py  uploads_manager.py  websocket_manager.py
src/: App.vue  InitApp.vue  init-main.js  style.css
test/: client.py  conftest.py  ex.cpp  init.sql  md5.js  md5.md  md5.wasm  test.html  test.py  test_api_auth.py  test_auth.py  test_emcc.py  test_fast.py  test_list_messages.py  test_messages.py  test_native.py  test_trash_and_quota.py  test_upload_flow.py  test_uploads.py  wasm.md  worker.js  ws_client.html
(+183 files in other folders)
